[project]
name = "vertex-explorer"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "colorlog>=6.10.1",
    "google-cloud-aiplatform>=1.148.1",
    "httpx>=0.28.0",
    "ipython>=9.13.0",
    "pendulum>=3.2.0",
    "rich>=15.0.0",
    "ruff>=0.15.12",
    "textual>=8.2.4",
]

[project.scripts]
ve = "vertex_explorer.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vertex_explorer"]
